--- a/index.html
+++ b/index.html
@@ -3,7 +3,61 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
         <title>ohmyfood</title>
     </head>
-    <body></body>
+    <body>
+        <header>
+            <h1>ohmyfood</h1>
+        </header>
+        <main>
+            <section class="lieu">
+                <i class="fa-map-marker-alt fas local__icon" aria-hidden="true"></i>
+                <span>Paris, Belleville</span>
+            </section>
+            <section class="explorer">
+                <h2>Réservez le menu qui vous convient</h2>
+                <p>Découvrez des restaurants d'exeption, séléctionnés par nos soins</p>
+                <a href="#">Explorer nos restaurants</a>
+            </section>
+            <section class="tuto">
+                <h2>Fonctionnement</h2>
+                <ol>
+                    <li class="tuto__element">Choisissez un restaurant</li>
+                    <li class="tuto__element">Composez votr menu</li>
+                    <li class="tuto__element">Dégustez au restaurant</li>
+                </ol>
+            </section>
+            <section class="restaurant">
+                <div class="menus">
+                    <h2>restaurants</h2>
+                    <a class="menu">
+                        <span class="menu__badge">Nouveau</span>
+                        <img src="Images et textes Ohmyfood-4/images/restaurants/" alt="">
+                        <footer class="menu__pied">
+                        <div class="menu__pied__soustitre">
+                            <h3>La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                        </div>
+                        <div class="menu__pied__icon">
+                            <i class="card__like fa-2x fa-heart fas menu__like menu__like--bg" aria-hidden="true"></i>
+                        </div>
+                        </footer>
+                    </a>
+                    
+
+                    </a>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <h2>ohmyfood</h2>
+            <ol>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ol>
+        </footer>
+    </body>
 </html>
