--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                         <span class="menu__badge">Nouveau</span>
                         <img src="Images et textes Ohmyfood-4/images/restaurants/" alt="">
                         <footer class="menu__pied">
-                        <div class="menu__pied__soustitre">
+                        <div class="pied__soustitre">
                             <h3>La palette du goût</h3>
                             <p>Ménilmontant</p>
                         </div>
-                        <div class="menu__pied__icon">
+                        <div class="pied__icon">
                             <i class="card__like fa-2x fa-heart fas menu__like menu__like--bg" aria-hidden="true"></i>
                         </div>
                         </footer>
