--- a/index.html
+++ b/index.html
@@ -3,61 +3,142 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+
         <link rel="stylesheet" href="style.css" />
         <title>ohmyfood</title>
     </head>
     <body>
         <header>
-            <h1>ohmyfood</h1>
+            <h1 class="titre">ohmyfood</h1>
         </header>
         <main>
-            <section class="lieu">
+            <section class="formulaire">
                 <i class="fa-map-marker-alt fas local__icon" aria-hidden="true"></i>
-                <span>Paris, Belleville</span>
+                <span class="formulaire__lieu">Paris, Belleville</span>
             </section>
-            <section class="explorer">
-                <h2>Réservez le menu qui vous convient</h2>
-                <p>Découvrez des restaurants d'exeption, séléctionnés par nos soins</p>
-                <a href="#">Explorer nos restaurants</a>
+
+            <section class="hero">
+                <h2 class="hero__titre">Réservez le menu qui vous convient</h2>
+                <p class="hero__sous-titre">Découvrez des restaurants d exeption, séléctionnés par nos soins</p>
+                <a class="btn hero__btn" href="#">Explorer nos restaurants</a>
             </section>
             <section class="tuto">
                 <h2>Fonctionnement</h2>
-                <ol>
-                    <li class="tuto__element">Choisissez un restaurant</li>
-                    <li class="tuto__element">Composez votr menu</li>
-                    <li class="tuto__element">Dégustez au restaurant</li>
+                <ol class="tuto__elements">
+                    <li class="tuto__element">
+                        <span class="span">1</span>
+                        <i class="fa-mobile-alt fas tuto__icon" aria-hidden="true"></i>Choisissez un restaurant
+                    </li>
+                    <li class="tuto__element">
+                        <span class="span">2</span>
+                        <i class="fa-list-ul fas tuto__icon" aria-hidden="true"></i>Composez votre menu
+                    </li>
+                    <li class="tuto__element">
+                        <span class="span">3</span>
+                        <i class="fa-store fas tuto__icon" aria-hidden="true"></i> Dégustez au restaurant
+                    </li>
                 </ol>
             </section>
-            <section class="restaurant">
-                <div class="menus">
-                    <h2>restaurants</h2>
+            <section class="restaurants">
+                <div class="conteneur">
+                    <h2 class="restaurants__titre">Restaurants</h2>
+
                     <a class="menu">
                         <span class="menu__badge">Nouveau</span>
-                        <img src="Images et textes Ohmyfood-4/images/restaurants/" alt="">
+                        <img
+                            class="menu__image"
+                            src="Images et textes Ohmyfood-4/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                            alt=""
+                        />
                         <footer class="menu__pied">
-                        <div class="pied__soustitre">
-                            <h3>La palette du goût</h3>
-                            <p>Ménilmontant</p>
-                        </div>
-                        <div class="pied__icon">
-                            <i class="card__like fa-2x fa-heart fas menu__like menu__like--bg" aria-hidden="true"></i>
-                        </div>
+                            <div class="menu__contenue">
+                                <h3 class="menu__titre">La palette du goût</h3>
+                                <p class="menu__sous-titre">Ménilmontant</p>
+                            </div>
+                            <div class="menu__btn">
+                                <i
+                                    class="card__like fa-2x fa-heart fas menu__like menu__like--bg"
+                                    aria-hidden="true"
+                                ></i>
+                            </div>
                         </footer>
                     </a>
-                    
-
+                    <a class="menu">
+                        <span class="menu__badge">Nouveau</span>
+                        <img
+                            class="menu__image"
+                            src="Images et textes Ohmyfood-4/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                            alt=""
+                        />
+                        <footer class="menu__pied">
+                            <div class="menu__contenue">
+                                <h3 class="menu__titre">La note enchantée</h3>
+                                <p class="menu__sous-titre">Charonne</p>
+                            </div>
+                            <div class="menu__btn">
+                                <i
+                                    class="card__like fa-2x fa-heart fas menu__like menu__like--bg"
+                                    aria-hidden="true"
+                                ></i>
+                            </div>
+                        </footer>
+                    </a>
+                    <a class="menu">
+                        <span class="menu__badge">Nouveau</span>
+                        <img
+                            class="menu__image"
+                            src="Images et textes Ohmyfood-4/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                            alt=""
+                        />
+                        <span class="menu__badge">Nouveau</span>
+                        <footer class="menu__pied">
+                            <div class="menu__contenue">
+                                <h3 class="menu__titre">À la française</h3>
+                                <p class="menu__sous-titre">Cité Rouge</p>
+                            </div>
+                            <div class="menu__btn">
+                                <i
+                                    class="card__like fa-2x fa-heart fas menu__like menu__like--bg"
+                                    aria-hidden="true"
+                                ></i>
+                            </div>
+                        </footer>
+                    </a>
+                    <a class="menu">
+                        <span class="menu__badge">Nouveau</span>
+                        <img
+                            class="menu__image"
+                            src="Images et textes Ohmyfood-4/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                            alt=""
+                        />
+                        <footer class="menu__pied">
+                            <div class="menu__contenue">
+                                <h3 class="menu__titre">Le délice des sens</h3>
+                                <p class="menu__sous-titre">Folie-Méricourt</p>
+                            </div>
+                            <div class="menu__btn">
+                                <i
+                                    class="card__like fa-2x fa-heart fas menu__like menu__like--bg"
+                                    aria-hidden="true"
+                                ></i>
+                            </div>
+                        </footer>
                     </a>
                 </div>
             </section>
         </main>
-        <footer>
-            <h2>ohmyfood</h2>
-            <ol>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-            </ol>
+
+        <footer class="footer">
+            <div class="conteneur">
+                <h2 class="footer__titre">ohmyfood</h2>
+                <ul class="footer__liste">
+                    <li class="footer__sous-liste"><a class="footer__lien" href="">Proposer un restaurant</a></li>
+                    <li class="footer__sous-liste"><a class="footer__lien" href="">Devenur partenaire</a></li>
+                    <li class="footer__sous-liste"><a class="footer__lien" href="">Mentions légales</a></li>
+                    <li class="footer__sous-liste"><a class="footer__lien" href="">Contact</a></li>
+                </ul>
+            </div>
         </footer>
     </body>
 </html>
