--- a/index.html
+++ b/index.html
@@ -130,15 +130,19 @@
         </main>
 
         <footer class="footer">
-            <div class="conteneur">
-                <h2 class="footer__titre">ohmyfood</h2>
-                <ul class="footer__liste">
-                    <li class="footer__sous-liste"><a class="footer__lien" href="">Proposer un restaurant</a></li>
-                    <li class="footer__sous-liste"><a class="footer__lien" href="">Devenur partenaire</a></li>
-                    <li class="footer__sous-liste"><a class="footer__lien" href="">Mentions légales</a></li>
-                    <li class="footer__sous-liste"><a class="footer__lien" href="">Contact</a></li>
-                </ul>
-            </div>
+            <span class="conteneur__logo">ohmyfood</span>
+            <ul class="footer__liste">
+                <li class="footer__sous-liste">
+                    <i class="fa-utensils fas footer__icon" aria-hidden="true"></i>
+                    <a class="footer__lien" href="">Proposer un restaurant</a>
+                </li>
+                <li class="footer__sous-liste">
+                    <i class="fa-hands-helping fas footer__icon" aria-hidden="true"></i>
+                    <a class="footer__lien" href="">Devenur partenaire</a>
+                </li>
+                <li class="footer__sous-liste"><a class="footer__lien" href="">Mentions légales</a></li>
+                <li class="footer__sous-liste"><a class="footer__lien" href="">Contact</a></li>
+            </ul>
         </footer>
     </body>
 </html>
