--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </li>
                 <li class="footer__sous-liste">
                     <i class="fa-hands-helping fas footer__icon" aria-hidden="true"></i>
-                    <a class="footer__lien" href="">Devenur partenaire</a>
+                    <a class="footer__lien" href="">Devenir partenaire</a>
                 </li>
                 <li class="footer__sous-liste"><a class="footer__lien" href="">Mentions légales</a></li>
                 <li class="footer__sous-liste"><a class="footer__lien" href="">Contact</a></li>
