--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 
-        <link rel="stylesheet" href="style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet" />
+
+        <link rel="stylesheet" href="style/style.css" />
         <title>ohmyfood</title>
     </head>
     <body>
@@ -17,11 +21,10 @@
                 <i class="fa-map-marker-alt fas local__icon" aria-hidden="true"></i>
                 <span class="formulaire__lieu">Paris, Belleville</span>
             </section>
-
             <section class="hero">
                 <h2 class="hero__titre">Réservez le menu qui vous convient</h2>
                 <p class="hero__sous-titre">Découvrez des restaurants d exeption, séléctionnés par nos soins</p>
-                <a class="btn hero__btn" href="#">Explorer nos restaurants</a>
+                <a href="#"> <span class="btn hero__btn">Explorer nos restaurants</span></a>
             </section>
             <section class="tuto">
                 <h2>Fonctionnement</h2>
@@ -43,8 +46,7 @@
             <section class="restaurants">
                 <div class="conteneur">
                     <h2 class="restaurants__titre">Restaurants</h2>
-
-                    <a class="menu">
+                    <a class="menu" href="page1.html">
                         <span class="menu__badge">Nouveau</span>
                         <img
                             class="menu__image"
