--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="fr">
     <head>
         <meta charset="UTF-8" />
@@ -12,7 +13,7 @@
         <link rel="stylesheet" href="style/style.css" />
         <title>ohmyfood</title>
     </head>
-    <body>
+    <body class="body">
         <header>
             <h1 class="titre">ohmyfood</h1>
         </header>
@@ -48,9 +49,10 @@
                     <h2 class="restaurants__titre">Restaurants</h2>
                     <a class="menu" href="page1.html">
                         <span class="menu__badge">Nouveau</span>
+
                         <img
                             class="menu__image"
-                            src="Images et textes Ohmyfood-4/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                            src="Images_et_textes_Ohmyfood-4/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                             alt=""
                         />
                         <footer class="menu__pied">
@@ -70,7 +72,7 @@
                         <span class="menu__badge">Nouveau</span>
                         <img
                             class="menu__image"
-                            src="Images et textes Ohmyfood-4/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                            src="Images_et_textes_Ohmyfood-4/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                             alt=""
                         />
                         <footer class="menu__pied">
@@ -90,7 +92,7 @@
                         <span class="menu__badge">Nouveau</span>
                         <img
                             class="menu__image"
-                            src="Images et textes Ohmyfood-4/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                            src="Images_et_textes_Ohmyfood-4/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                             alt=""
                         />
                         <span class="menu__badge">Nouveau</span>
@@ -111,7 +113,7 @@
                         <span class="menu__badge">Nouveau</span>
                         <img
                             class="menu__image"
-                            src="Images et textes Ohmyfood-4/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                            src="Images_et_textes_Ohmyfood-4/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                             alt=""
                         />
                         <footer class="menu__pied">
