--- a/page1.html
+++ b/page1.html
@@ -13,16 +13,15 @@
         <link rel="stylesheet" href="style/style.css" />
         <title>ohmyfood</title>
     </head>
-    <body>
+    <body class="body">
         <header>
             <h1 class="titre">ohmyfood</h1>
         </header>
-
         <main>
             <img
                 class="menu__image"
-                src="Images et textes Ohmyfood-4/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                alt=""
+                src="Images_et_textes_Ohmyfood-4/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                alt="imahe "
             />
             <div class="carte menu__pied">
                 <section class="carte__titre">
@@ -32,47 +31,122 @@
                 <section class="carte__entrée">
                     <h1 class="carte__entrée--titre">ENTRÉES</h1>
                     <section class="carte__entrée--element">
-                        <h2 class="entrée__titre">Fricassée d'escargots</h2>
-                        <p class="entrée__sous-titre">Au piment d'Espelette</p>
+                        <div class="entrée__description">
+                            <h2 class="entrée__titre">Fricassée d'escargots</h2>
+                            <p class="entrée__sous-titre">Au piment d'Espelette</p>
+                        </div>
+                        <div class="prix_badge">
+                            <div class="entrée__prix">25€</div>
+                            <div class="entrée__confirmation">
+                                <i class="entrée__icon fas fa-check"></i>
+                            </div>
+                        </div>
                     </section>
                     <section class="carte__entrée--element">
-                        <h2 class="entrée__titre">Fricassée d'escargots</h2>
-                        <p class="entrée__sous-titre">Au piment d'Espelette</p>
+                        <div class="entrée__description">
+                            <h2 class="entrée__titre">Fricassée d'escargots</h2>
+                            <p class="entrée__sous-titre">Au piment d'Espelette</p>
+                        </div>
+                        <div class="prix_badge">
+                            <div class="entrée__prix">25€</div>
+                            <div class="entrée__confirmation">
+                                <i class="entrée__icon fas fa-check"></i>
+                            </div>
+                        </div>
                     </section>
                     <section class="carte__entrée--element">
-                        <h2 class="entrée__titre">Fricassée d'escargots</h2>
-                        <p class="entrée__sous-titre">Au piment d'Espelette</p>
+                        <div class="entrée__description">
+                            <h2 class="entrée__titre">Fricassée d'escargots</h2>
+                            <p class="entrée__sous-titre">Au piment d'Espelette</p>
+                        </div>
+                        <div class="prix_badge">
+                            <div class="entrée__prix">25€</div>
+                            <div class="entrée__confirmation">
+                                <i class="entrée__icon fas fa-check"></i>
+                            </div>
+                        </div>
                     </section>
                 </section>
                 <section class="carte__entrée">
                     <h1 class="carte__entrée--titre">PLATS</h1>
                     <section class="carte__entrée--element">
-                        <h2 class="entrée__titre">Filet de boeuf aux herbes</h2>
-                        <p class="entrée__sous-titre">Accompagné de sa ribambelle de légumes</p>
+                        <div class="entrée__description">
+                            <h2 class="entrée__titre">Filet de boeuf aux herbes</h2>
+                            <p class="entrée__sous-titre">Accompagné de sa ribambel le de légumes</p>
+                        </div>
+                        <div class="prix_badge">
+                            <div class="entrée__prix">25€</div>
+                            <div class="entrée__confirmation">
+                                <i class="entrée__icon fas fa-check"></i>
+                            </div>
+                        </div>
                     </section>
                     <section class="carte__entrée--element">
-                        <h2 class="entrée__titre">Parmentier de queue de boeuf</h2>
-                        <p class="entrée__sous-titre">A la truffe noire sur sa purée de panais</p>
+                        <div class="entrée__description">
+                            <h2 class="entrée__titre">Parmentier de queue de boeuf</h2>
+                            <p class="entrée__sous-titre">A la truffe noire sur sa purée de panais</p>
+                        </div>
+                        <div class="prix_badge">
+                            <div class="entrée__prix">25€</div>
+                            <div class="entrée__confirmation">
+                                <i class="entrée__icon fas fa-check"></i>
+                            </div>
+                        </div>
                     </section>
                     <section class="carte__entrée--element">
-                        <h2 class="entrée__titre">Filet de Turbot</h2>
-                        <p class="entrée__sous-titre">Aux agrumes</p>
+                        <div class="entrée__description">
+                            <h2 class="entrée__titre">Filet de Turbot</h2>
+                            <p class="entrée__sous-titre">Aux agrumes</p>
+                        </div>
+                        <div class="prix_badge">
+                            <div class="entrée__prix">25€</div>
+                            <div class="entrée__confirmation">
+                                <i class="entrée__icon fas fa-check"></i>
+                            </div>
+                        </div>
                     </section>
                 </section>
                 <section class="carte__entrée">
                     <h1 class="carte__entrée--titre">DESSERT</h1>
                     <section class="carte__entrée--element">
-                        <h2 class="entrée__titre">Paris-Brest</h2>
-                        <p class="entrée__sous-titre">Revisité</p>
+                        <div class="entrée__description">
+                            <h2 class="entrée__titre">Paris-Brest</h2>
+                            <p class="entrée__sous-titre">Revisité</p>
+                        </div>
+                        <div class="prix_badge">
+                            <div class="entrée__prix">25€</div>
+                            <div class="entrée__confirmation">
+                                <i class="entrée__icon fas fa-check"></i>
+                            </div>
+                        </div>
                     </section>
                     <section class="carte__entrée--element">
-                        <h2 class="entrée__titre">Macaron au chocolat d'exception</h2>
-                        <p class="entrée__sous-titre">Et glace à la vanille de Madagascar</p>
+                        <div class="entrée__description">
+                            <h2 class="entrée__titre">Macaron au chocolat d'exception</h2>
+                            <p class="entrée__sous-titre">Et glace à la vanille de Madagascar</p>
+                        </div>
+                        <div class="prix_badge">
+                            <div class="entrée__prix">25€</div>
+                            <div class="entrée__confirmation">
+                                <i class="entrée__icon fas fa-check"></i>
+                            </div>
+                        </div>
                     </section>
                     <section class="carte__entrée--element">
-                        <h2 class="entrée__titre">Mousse au chocolat</h2>
-                        <p class="entrée__sous-titre">Au piment d'espelette et à la truffe noire</p>
+                        <div class="entrée__description">
+                            <h2 class="entrée__titre">Mousse au chocolat</h2>
+                            <p class="entrée__sous-titre">Au piment d'espelette et à la truffe noire</p>
+                        </div>
+                        <div class="prix_badge">
+                            <div class="entrée__prix">25€</div>
+                            <div class="entrée__confirmation">
+                                <i class="entrée__icon fas fa-check"></i>
+                            </div>
+                        </div>
                     </section>
+                </section>
+                <section class="hero hero-page">
+                    <a href="#"> <span class="btn hero__btn">Commander</span></a>
                 </section>
             </div>
         </main>
@@ -91,6 +165,7 @@
                 <li class="footer__sous-liste"><a class="footer__lien" href="">Mentions légales</a></li>
                 <li class="footer__sous-liste"><a class="footer__lien" href="">Contact</a></li>
             </ul>
+            <a href="#"> <span class="btn hero__btn">Commander</span></a>
         </footer>
     </body>
 </html>
