--- a/Ledelice.html
+++ b/Ledelice.html
@@ -25,122 +25,127 @@
             />
             <div class="carte menu__pied">
                 <section class="carte__titre">
-                    <h1 class="titre">La palette du goût</h1>
+                    <h1 class="titre">Le délice des sens</h1>
                     <i class="card__like fa-2x fa-heart fas menu__like menu__like--bg" aria-hidden="true"></i>
                 </section>
                 <section class="carte__entrée">
                     <h1 class="carte__entrée--titre">ENTRÉES</h1>
+                    <div class="barre__verte"></div>
                     <section class="carte__entrée--element">
                         <div class="entrée__description">
-                            <h2 class="entrée__titre">Fricassée d'escargots</h2>
-                            <p class="entrée__sous-titre">Au piment d'Espelette</p>
+                            <h2 class="entrée__titre">Tartare de thon</h2>
+                            <p class="entrée__sous-titre">Assaisonné au yuzu</p>
                         </div>
                         <div class="prix_badge">
                             <div class="entrée__prix">25€</div>
                             <div class="entrée__confirmation">
-                                <i class="entrée__icon fas fa-check"></i>
+                                <div class="logobg">
+                                    <i class="entrée__icon fas fa-check"></i>
+                                </div>
                             </div>
                         </div>
                     </section>
                     <section class="carte__entrée--element">
                         <div class="entrée__description">
-                            <h2 class="entrée__titre">Fricassée d'escargots</h2>
-                            <p class="entrée__sous-titre">Au piment d'Espelette</p>
+                            <h2 class="entrée__titre">Bouchée de homard croustillant</h2>
+                            <p class="entrée__sous-titre">Et sa farandole de petits légumes</p>
                         </div>
                         <div class="prix_badge">
-                            <div class="entrée__prix">25€</div>
+                            <div class="entrée__prix">35€</div>
                             <div class="entrée__confirmation">
-                                <i class="entrée__icon fas fa-check"></i>
+                                <div class="logobg"><i class="entrée__icon fas fa-check"></i></div>
                             </div>
                         </div>
                     </section>
                     <section class="carte__entrée--element">
                         <div class="entrée__description">
-                            <h2 class="entrée__titre">Fricassée d'escargots</h2>
-                            <p class="entrée__sous-titre">Au piment d'Espelette</p>
+                            <h2 class="entrée__titre">Velouté de cèpes</h2>
+                            <p class="entrée__sous-titre">Aux truffes</p>
                         </div>
                         <div class="prix_badge">
-                            <div class="entrée__prix">25€</div>
+                            <div class="entrée__prix">20€</div>
                             <div class="entrée__confirmation">
-                                <i class="entrée__icon fas fa-check"></i>
+                                <div class="logobg"><i class="entrée__icon fas fa-check"></i></div>
                             </div>
                         </div>
                     </section>
                 </section>
                 <section class="carte__entrée">
                     <h1 class="carte__entrée--titre">PLATS</h1>
+                    <div class="barre__verte"></div>
                     <section class="carte__entrée--element">
                         <div class="entrée__description">
-                            <h2 class="entrée__titre">Filet de boeuf aux herbes</h2>
-                            <p class="entrée__sous-titre">Accompagné de sa ribambel le de légumes</p>
+                            <h2 class="entrée__titre">Poulet rôti aux herbes de Provence</h2>
+                            <p class="entrée__sous-titre">Et sa crème de truffe</p>
                         </div>
                         <div class="prix_badge">
-                            <div class="entrée__prix">25€</div>
+                            <div class="entrée__prix">40€</div>
                             <div class="entrée__confirmation">
-                                <i class="entrée__icon fas fa-check"></i>
+                                <div class="logobg"><i class="entrée__icon fas fa-check"></i></div>
                             </div>
                         </div>
                     </section>
                     <section class="carte__entrée--element">
                         <div class="entrée__description">
-                            <h2 class="entrée__titre">Parmentier de queue de boeuf</h2>
-                            <p class="entrée__sous-titre">A la truffe noire sur sa purée de panais</p>
+                            <h2 class="entrée__titre">Langouste rôtie</h2>
+                            <p class="entrée__sous-titre">Et ses légumes de saison</p>
                         </div>
                         <div class="prix_badge">
-                            <div class="entrée__prix">25€</div>
+                            <div class="entrée__prix">35€</div>
                             <div class="entrée__confirmation">
-                                <i class="entrée__icon fas fa-check"></i>
+                                <div class="logobg"><i class="entrée__icon fas fa-check"></i></div>
                             </div>
                         </div>
                     </section>
                     <section class="carte__entrée--element">
                         <div class="entrée__description">
-                            <h2 class="entrée__titre">Filet de Turbot</h2>
-                            <p class="entrée__sous-titre">Aux agrumes</p>
+                            <h2 class="entrée__titre">Côte de bœuf Angus</h2>
+                            <p class="entrée__sous-titre">Et sa purée de panais</p>
                         </div>
                         <div class="prix_badge">
-                            <div class="entrée__prix">25€</div>
+                            <div class="entrée__prix">44€</div>
                             <div class="entrée__confirmation">
-                                <i class="entrée__icon fas fa-check"></i>
+                                <div class="logobg"><i class="entrée__icon fas fa-check"></i></div>
                             </div>
                         </div>
                     </section>
                 </section>
                 <section class="carte__entrée">
                     <h1 class="carte__entrée--titre">DESSERT</h1>
+                    <div class="barre__verte"></div>
                     <section class="carte__entrée--element">
                         <div class="entrée__description">
-                            <h2 class="entrée__titre">Paris-Brest</h2>
-                            <p class="entrée__sous-titre">Revisité</p>
+                            <h2 class="entrée__titre">Farandole de desserts</h2>
+                            <p class="entrée__sous-titre">Du chef</p>
                         </div>
                         <div class="prix_badge">
-                            <div class="entrée__prix">25€</div>
+                            <div class="entrée__prix">18€</div>
                             <div class="entrée__confirmation">
-                                <i class="entrée__icon fas fa-check"></i>
+                                <div class="logobg"><i class="entrée__icon fas fa-check"></i></div>
                             </div>
                         </div>
                     </section>
                     <section class="carte__entrée--element">
                         <div class="entrée__description">
-                            <h2 class="entrée__titre">Macaron au chocolat d'exception</h2>
-                            <p class="entrée__sous-titre">Et glace à la vanille de Madagascar</p>
+                            <h2 class="entrée__titre">Crème brulée</h2>
+                            <p class="entrée__sous-titre">Revisitée</p>
                         </div>
                         <div class="prix_badge">
-                            <div class="entrée__prix">25€</div>
+                            <div class="entrée__prix">22€</div>
                             <div class="entrée__confirmation">
-                                <i class="entrée__icon fas fa-check"></i>
+                                <div class="logobg"><i class="entrée__icon fas fa-check"></i></div>
                             </div>
                         </div>
                     </section>
                     <section class="carte__entrée--element">
                         <div class="entrée__description">
-                            <h2 class="entrée__titre">Mousse au chocolat</h2>
-                            <p class="entrée__sous-titre">Au piment d'espelette et à la truffe noire</p>
+                            <h2 class="entrée__titre">Tiramisu</h2>
+                            <p class="entrée__sous-titre">À la noisette</p>
                         </div>
                         <div class="prix_badge">
-                            <div class="entrée__prix">25€</div>
+                            <div class="entrée__prix">23€</div>
                             <div class="entrée__confirmation">
-                                <i class="entrée__icon fas fa-check"></i>
+                                <div class="logobg"><i class="entrée__icon fas fa-check"></i></div>
                             </div>
                         </div>
                     </section>
@@ -165,7 +170,6 @@
                 <li class="footer__sous-liste"><a class="footer__lien" href="">Mentions légales</a></li>
                 <li class="footer__sous-liste"><a class="footer__lien" href="">Contact</a></li>
             </ul>
-            <a href="#"> <span class="btn hero__btn">Commander</span></a>
         </footer>
     </body>
 </html>
