--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="fr">
     <head>
         <meta charset="UTF-8" />
@@ -25,8 +24,9 @@
             <section class="hero">
                 <h2 class="hero__titre">Réservez le menu qui vous convient</h2>
                 <p class="hero__sous-titre">Découvrez des restaurants d exeption, séléctionnés par nos soins</p>
-                <a href="#"> <span class="btn hero__btn">Explorer nos restaurants</span></a>
+                <a href="#conteneur"> <span class="btn hero__btn">Explorer nos restaurants</span></a>
             </section>
+
             <section class="tuto">
                 <h2>Fonctionnement</h2>
                 <ol class="tuto__elements">
@@ -44,12 +44,12 @@
                     </li>
                 </ol>
             </section>
-            <section class="restaurants">
-                <div class="conteneur">
-                    <h2 class="restaurants__titre">Restaurants</h2>
-                    <a class="menu" href="page1.html">
-                        <span class="menu__badge">Nouveau</span>
 
+            <section class="restaurants conteneur">
+                <h2 class="restaurants__titre">Restaurants</h2>
+                <div class="conteneur conteneur__restaurants" id="conteneur">
+                    <a class="menu" href="Lapalette.html">
+                        <span class="menu__badge">Nouveau</span>
                         <img
                             class="menu__image"
                             src="Images_et_textes_Ohmyfood-4/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
@@ -68,7 +68,7 @@
                             </div>
                         </footer>
                     </a>
-                    <a class="menu">
+                    <a class="menu" href="lanote.html">
                         <span class="menu__badge">Nouveau</span>
                         <img
                             class="menu__image"
@@ -88,7 +88,7 @@
                             </div>
                         </footer>
                     </a>
-                    <a class="menu">
+                    <a class="menu" href="francaise.html">
                         <span class="menu__badge">Nouveau</span>
                         <img
                             class="menu__image"
@@ -109,12 +109,12 @@
                             </div>
                         </footer>
                     </a>
-                    <a class="menu">
+                    <a class="menu" href="Ledelice.html">
                         <span class="menu__badge">Nouveau</span>
                         <img
                             class="menu__image"
                             src="Images_et_textes_Ohmyfood-4/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                            alt=""
+                            alt="photo"
                         />
                         <footer class="menu__pied">
                             <div class="menu__contenue">
