--- a/Ledelice.html
+++ b/Ledelice.html
@@ -15,7 +15,8 @@
     </head>
     <body class="body">
         <header>
-            <h1 class="titre">ohmyfood</h1>
+            <a href="index.html"><i class="fa-arrow-left fas header__arrow" aria-hidden="true"></i></a>
+            <a href="index.html"><h1 class="titre">ohmyfood</h1></a>
         </header>
         <main>
             <img
@@ -24,7 +25,7 @@
                 alt="imahe "
             />
             <div class="carte menu__pied">
-                <section class="carte__titre">
+                <section class="carte__titre menu__btn">
                     <h1 class="titre">Le délice des sens</h1>
                     <i class="card__like fa-2x fa-heart fas menu__like menu__like--bg" aria-hidden="true"></i>
                 </section>
@@ -157,18 +158,18 @@
         </main>
 
         <footer class="footer">
-            <span class="conteneur__logo">ohmyfood</span>
+            <a href="index.html"><span class="conteneur__logo">ohmyfood</span></a>
             <ul class="footer__liste">
                 <li class="footer__sous-liste">
                     <i class="fa-utensils fas footer__icon" aria-hidden="true"></i>
-                    <a class="footer__lien" href="">Proposer un restaurant</a>
+                    <a class="footer__lien" href="#">Proposer un restaurant</a>
                 </li>
                 <li class="footer__sous-liste">
                     <i class="fa-hands-helping fas footer__icon" aria-hidden="true"></i>
-                    <a class="footer__lien" href="">Devenir partenaire</a>
+                    <a class="footer__lien" href="#">Devenir partenaire</a>
                 </li>
-                <li class="footer__sous-liste"><a class="footer__lien" href="">Mentions légales</a></li>
-                <li class="footer__sous-liste"><a class="footer__lien" href="">Contact</a></li>
+                <li class="footer__sous-liste"><a class="footer__lien" href="#">Mentions légales</a></li>
+                <li class="footer__sous-liste"><a class="footer__lien" href="#">Contact</a></li>
             </ul>
         </footer>
     </body>
