--- a/francaise.html
+++ b/francaise.html
@@ -14,7 +14,8 @@
     </head>
     <body class="body">
         <header>
-            <h1 class="titre">ohmyfood</h1>
+            <a href="index.html"><i class="fa-arrow-left fas header__arrow" aria-hidden="true"></i></a>
+            <a href="index.html"><h1 class="titre">ohmyfood</h1></a>
         </header>
         <main>
             <img
@@ -23,7 +24,7 @@
                 alt="image"
             />
             <div class="carte menu__pied">
-                <section class="carte__titre">
+                <section class="carte__titre menu__btn">
                     <h1 class="titre">À la française</h1>
                     <i class="card__like fa-2x fa-heart fas menu__like menu__like--bg" aria-hidden="true"></i>
                 </section>
@@ -172,7 +173,8 @@
         </main>
 
         <footer class="footer">
-            <span class="conteneur__logo">ohmyfood</span>
+            <a href="index.html"><span class="conteneur__logo">ohmyfood</span></a>
+
             <ul class="footer__liste">
                 <li class="footer__sous-liste">
                     <i class="fa-utensils fas footer__icon" aria-hidden="true"></i>
