--- a/index.html
+++ b/index.html
@@ -14,127 +14,139 @@
     </head>
     <body class="body">
         <header>
-            <h1 class="titre">ohmyfood</h1>
+            <a href="index.html"><h1 class="titre">ohmyfood</h1></a>
         </header>
         <main>
-            <section class="formulaire">
+            <form class="formulaire" action="#" method="POST">
                 <i class="fa-map-marker-alt fas local__icon" aria-hidden="true"></i>
-                <span class="formulaire__lieu">Paris, Belleville</span>
-            </section>
+                <input class="placeholder" type="search" placeholder="Paris, Belleville" />
+            </form>
+
             <section class="hero">
                 <h2 class="hero__titre">Réservez le menu qui vous convient</h2>
-                <p class="hero__sous-titre">Découvrez des restaurants d exeption, séléctionnés par nos soins</p>
+                <p class="hero__sous-titre">Découvrez des restaurants d'exeption, séléctionnés par nos soins</p>
                 <a href="#conteneur"> <span class="btn hero__btn">Explorer nos restaurants</span></a>
             </section>
 
             <section class="tuto">
-                <h2>Fonctionnement</h2>
-                <ol class="tuto__elements">
-                    <li class="tuto__element">
-                        <span class="span">1</span>
-                        <i class="fa-mobile-alt fas tuto__icon" aria-hidden="true"></i>Choisissez un restaurant
-                    </li>
-                    <li class="tuto__element">
-                        <span class="span">2</span>
-                        <i class="fa-list-ul fas tuto__icon" aria-hidden="true"></i>Composez votre menu
-                    </li>
-                    <li class="tuto__element">
-                        <span class="span">3</span>
-                        <i class="fa-store fas tuto__icon" aria-hidden="true"></i> Dégustez au restaurant
-                    </li>
-                </ol>
+                <div class="conteneur">
+                    <h2>Fonctionnement</h2>
+                    <ol class="tuto__elements">
+                        <li class="tuto__element">
+                            <span class="span">1</span>
+                            <i class="fa-mobile-alt fas tuto__icon" aria-hidden="true"></i>Choisissez un restaurant
+                        </li>
+                        <li class="tuto__element">
+                            <span class="span">2</span>
+                            <i class="fa-list-ul fas tuto__icon" aria-hidden="true"></i>Composez votre menu
+                        </li>
+                        <li class="tuto__element">
+                            <span class="span">3</span>
+                            <i class="fa-store fas tuto__icon" aria-hidden="true"></i> Dégustez au restaurant
+                        </li>
+                    </ol>
+                </div>
             </section>
 
-            <section class="restaurants conteneur">
-                <h2 class="restaurants__titre">Restaurants</h2>
-                <div class="conteneur conteneur__restaurants" id="conteneur">
-                    <a class="menu" href="Lapalette.html">
-                        <span class="menu__badge">Nouveau</span>
-                        <img
-                            class="menu__image"
-                            src="Images_et_textes_Ohmyfood-4/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                            alt=""
-                        />
-                        <footer class="menu__pied">
-                            <div class="menu__contenue">
-                                <h3 class="menu__titre">La palette du goût</h3>
-                                <p class="menu__sous-titre">Ménilmontant</p>
-                            </div>
-                            <div class="menu__btn">
-                                <i
-                                    class="card__like fa-2x fa-heart fas menu__like menu__like--bg"
-                                    aria-hidden="true"
-                                ></i>
-                            </div>
-                        </footer>
-                    </a>
-                    <a class="menu" href="lanote.html">
-                        <span class="menu__badge">Nouveau</span>
-                        <img
-                            class="menu__image"
-                            src="Images_et_textes_Ohmyfood-4/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                            alt=""
-                        />
-                        <footer class="menu__pied">
-                            <div class="menu__contenue">
-                                <h3 class="menu__titre">La note enchantée</h3>
-                                <p class="menu__sous-titre">Charonne</p>
-                            </div>
-                            <div class="menu__btn">
-                                <i
-                                    class="card__like fa-2x fa-heart fas menu__like menu__like--bg"
-                                    aria-hidden="true"
-                                ></i>
-                            </div>
-                        </footer>
-                    </a>
-                    <a class="menu" href="francaise.html">
-                        <span class="menu__badge">Nouveau</span>
-                        <img
-                            class="menu__image"
-                            src="Images_et_textes_Ohmyfood-4/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                            alt=""
-                        />
-                        <span class="menu__badge">Nouveau</span>
-                        <footer class="menu__pied">
-                            <div class="menu__contenue">
-                                <h3 class="menu__titre">À la française</h3>
-                                <p class="menu__sous-titre">Cité Rouge</p>
-                            </div>
-                            <div class="menu__btn">
-                                <i
-                                    class="card__like fa-2x fa-heart fas menu__like menu__like--bg"
-                                    aria-hidden="true"
-                                ></i>
-                            </div>
-                        </footer>
-                    </a>
-                    <a class="menu" href="Ledelice.html">
-                        <span class="menu__badge">Nouveau</span>
-                        <img
-                            class="menu__image"
-                            src="Images_et_textes_Ohmyfood-4/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                            alt="photo"
-                        />
-                        <footer class="menu__pied">
-                            <div class="menu__contenue">
-                                <h3 class="menu__titre">Le délice des sens</h3>
-                                <p class="menu__sous-titre">Folie-Méricourt</p>
-                            </div>
-                            <div class="menu__btn">
-                                <i
-                                    class="card__like fa-2x fa-heart fas menu__like menu__like--bg"
-                                    aria-hidden="true"
-                                ></i>
-                            </div>
-                        </footer>
-                    </a>
+            <section class="restaurants">
+                <div class="conteneur" id="conteneur">
+                    <h2 class="restaurants__titre">Restaurants</h2>
+                    <ol class="cards">
+                        <li class="card">
+                            <a class="menu" href="Lapalette.html">
+                                <span class="menu__badge">Nouveau</span>
+                                <img
+                                    class="menu__image"
+                                    src="Images_et_textes_Ohmyfood-4/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                                    alt=""
+                                />
+                                <footer class="menu__pied">
+                                    <div class="menu__contenue">
+                                        <h3 class="menu__titre">La palette du goût</h3>
+                                        <p class="menu__sous-titre">Ménilmontant</p>
+                                    </div>
+                                    <div class="menu__btn">
+                                        <i
+                                            class="card__like fa-2x fa-heart fas menu__like menu__like--bg"
+                                            aria-hidden="true"
+                                        ></i>
+                                    </div>
+                                </footer>
+                            </a>
+                        </li>
+                        <li class="card">
+                            <a class="menu" href="lanote.html">
+                                <span class="menu__badge">Nouveau</span>
+                                <img
+                                    class="menu__image"
+                                    src="Images_et_textes_Ohmyfood-4/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                                    alt=""
+                                />
+                                <footer class="menu__pied">
+                                    <div class="menu__contenue">
+                                        <h3 class="menu__titre">La note enchantée</h3>
+                                        <p class="menu__sous-titre">Charonne</p>
+                                    </div>
+                                    <div class="menu__btn">
+                                        <i
+                                            class="card__like fa-2x fa-heart fas menu__like menu__like--bg"
+                                            aria-hidden="true"
+                                        ></i>
+                                    </div>
+                                </footer>
+                            </a>
+                        </li>
+                        <li class="card">
+                            <a class="menu" href="francaise.html">
+                                <span class="menu__badge">Nouveau</span>
+                                <img
+                                    class="menu__image"
+                                    src="Images_et_textes_Ohmyfood-4/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                                    alt=""
+                                />
+                                <footer class="menu__pied">
+                                    <div class="menu__contenue">
+                                        <h3 class="menu__titre">À la française</h3>
+                                        <p class="menu__sous-titre">Cité Rouge</p>
+                                    </div>
+                                    <div class="menu__btn">
+                                        <i
+                                            class="card__like fa-2x fa-heart fas menu__like menu__like--bg"
+                                            aria-hidden="true"
+                                        ></i>
+                                    </div>
+                                </footer>
+                            </a>
+                        </li>
+                        <li class="card">
+                            <a class="menu" href="Ledelice.html">
+                                <span class="menu__badge">Nouveau</span>
+                                <img
+                                    class="menu__image"
+                                    src="Images_et_textes_Ohmyfood-4/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                                    alt="photo"
+                                />
+                                <footer class="menu__pied">
+                                    <div class="menu__contenue">
+                                        <h3 class="menu__titre">Le délice des sens</h3>
+                                        <p class="menu__sous-titre">Folie-Méricourt</p>
+                                    </div>
+                                    <div class="menu__btn">
+                                        <i
+                                            class="card__like fa-2x fa-heart fas menu__like menu__like--bg"
+                                            aria-hidden="true"
+                                        ></i>
+                                    </div>
+                                </footer>
+                            </a>
+                        </li>
+                    </ol>
                 </div>
             </section>
         </main>
 
         <footer class="footer">
-            <span class="conteneur__logo">ohmyfood</span>
+            <a href="index.html"><span class="conteneur__logo">ohmyfood</span></a>
             <ul class="footer__liste">
                 <li class="footer__sous-liste">
                     <i class="fa-utensils fas footer__icon" aria-hidden="true"></i>
