--- a/lanote.html
+++ b/lanote.html
@@ -13,7 +13,8 @@
     </head>
     <body class="body">
         <header>
-            <h1 class="titre">ohmyfood</h1>
+            <a href="index.html"><i class="fa-arrow-left fas header__arrow" aria-hidden="true"></i></a>
+            <a href="index.html"><h1 class="titre">ohmyfood</h1></a>
         </header>
         <main>
             <img
@@ -22,7 +23,7 @@
                 alt="imahe "
             />
             <div class="carte menu__pied">
-                <section class="carte__titre">
+                <section class="carte__titre menu__btn">
                     <h1 class="titre">La note enchantée</h1>
                     <i class="__like fa-2x fa-heart fas menu__like menu__like--bg" aria-hidden="true"></i>
                 </section>
@@ -187,7 +188,7 @@
         </main>
 
         <footer class="footer">
-            <span class="conteneur__logo">ohmyfood</span>
+            <a href="index.html"><span class="conteneur__logo">ohmyfood</span></a>
             <ul class="footer__liste">
                 <li class="footer__sous-liste">
                     <i class="fa-utensils fas footer__icon" aria-hidden="true"></i>
